fixes to all code